// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellData functional tests lifecycle snapshots: 1. initial text tag 1`] = `
<DocumentFragment>
  <div
    class="row-header-height col-label-width css-1wpoxe-Wrapper eoyj2860"
  >
    <div
      class="css-16d5k2m-DataTag ekht17d0"
      data-cell="result"
      data-location="B-2"
      tabindex="0"
    />
  </div>
</DocumentFragment>
`;

exports[`CellData functional tests lifecycle snapshots: 2. initial input tag 1`] = `
<DocumentFragment>
  <div
    class="row-header-height col-label-width css-1wpoxe-Wrapper eoyj2860"
  >
    <input
      class="css-1obixtf-Input egik0ru0"
      data-cell="input"
      data-location="B-2"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`CellData functional tests lifecycle snapshots: 3. text tag has text 1`] = `
<DocumentFragment>
  <div
    class="row-header-height col-label-width css-1wpoxe-Wrapper eoyj2860"
  >
    <div
      class="css-11zzl5v-DataTag ekht17d0"
      data-cell="result"
      data-location="B-2"
      tabindex="0"
    >
      9
    </div>
  </div>
</DocumentFragment>
`;

exports[`CellData functional tests lifecycle snapshots: 4. input tag has formula 1`] = `
<DocumentFragment>
  <div
    class="row-header-height col-label-width css-1wpoxe-Wrapper eoyj2860"
  >
    <input
      class="css-1obixtf-Input egik0ru0"
      data-cell="input"
      data-location="B-2"
      value="=2+3+4"
    />
  </div>
</DocumentFragment>
`;

exports[`CellData functional tests lifecycle snapshots: 5. cell value deleted with Backspace 1`] = `
<DocumentFragment>
  <div
    class="row-header-height col-label-width css-1wpoxe-Wrapper eoyj2860"
  >
    <div
      class="css-16d5k2m-DataTag ekht17d0"
      data-cell="result"
      data-location="B-2"
      tabindex="0"
    />
  </div>
</DocumentFragment>
`;

exports[`CellData functional tests lifecycle snapshots: 6. key down "a" on text tag 1`] = `
<DocumentFragment>
  <div
    class="row-header-height col-label-width css-1wpoxe-Wrapper eoyj2860"
  >
    <input
      class="css-1obixtf-Input egik0ru0"
      data-cell="input"
      data-location="B-2"
      value=""
    />
  </div>
</DocumentFragment>
`;
